# aruruu-bot

./: .gitignore  pyproject.toml
src/: helpers.py  main.py  str_prep.py
